<resources>
    <string name="app_name">Laboratorio 6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Erick Guerra</string>
    <string name="search">Search</string>
    <string name="genres">Your top genres</string>
    <string name="genre1">Rock</string>
    <string name="genre2">Hip-Hop</string>
    <string name="genre3">Latin</string>
    <string name="genre4">Punk</string>
    <string name="library_header">Your Library</string>
    <string name="liked">Liked Songs</string>
    <string name="most_recent">Most recent</string>
</resources>